[package]
name = 'posts-rpc'
version = '0.1.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Spaces pallet RPC to call a custom Runtime API'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[dependencies]
jsonrpc-core = '14.0.3'
jsonrpc-core-client = '14.0.3'
jsonrpc-derive = '14.0.3'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.101'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-posts]
default-features = false
path = '..'
version = '0.4.0'

[dependencies.posts-runtime-api]
default-features = false
path = '../runtime-api'

[dependencies.pallet-utils]
default-features = false
path = '../../utils'
version = '0.4.0'

[features]
default = ['std']
std = [
  'serde',
  'sp-runtime/std',
  'sp-api/std',
  'posts-runtime-api/std',
  'pallet-utils/std',
  'pallet-posts/std',
]
