[package]
name = 'posts-rpc'
version = '0.1.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'RPC methods for the posts pallet'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

jsonrpc-core = '15.0.0'
jsonrpc-core-client = '15.0.0'
jsonrpc-derive = '15.0.0'

# Local dependencies
pallet-posts = { default-features = false, path = '..' }
pallet-utils = { default-features = false, path = '../../utils' }

# Custom Runtime API
posts-runtime-api = { default-features = false, path = 'runtime-api' }

# Substrate dependencies
sp-api = { default-features = false, version = '2.0.1' }
sp-blockchain = { default-features = false, version = '2.0.1' }
sp-rpc = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
  'serde',
  'sp-runtime/std',
  'sp-api/std',
  'posts-runtime-api/std',
  'pallet-utils/std',
  'pallet-posts/std',
]
