[package]
name = 'roles-rpc'
version = '0.1.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Profile-follows pallet RPC to call a custom Runtime API'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.119'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
jsonrpc-core = '15.0.0'
jsonrpc-core-client = '15.0.0'
jsonrpc-derive = '15.0.0'

# Local dependencies
pallet-permissions = { default-features = false, path = '../../permissions' }
pallet-utils = { default-features = false, path = '../../utils' }

# Custom Runtime API
roles-runtime-api = { default-features = false, path = 'runtime-api' }

# Substrate dependencies
sp-api = { default-features = false, version = '2.0.1' }
sp-blockchain = { default-features = false, version = '2.0.1' }
sp-rpc = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
  'serde',
  'sp-runtime/std',
  'sp-api/std',
  'roles-runtime-api/std',
  'pallet-permissions/std',
  'pallet-utils/std',
]
