[package]
name = 'posts-runtime-api'
version = '0.1.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Runtime API definition for the posts pallet'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Local dependencies
pallet-posts = { default-features = false, path = '../..' }
pallet-utils = { default-features = false, path = '../../../utils' }

# Substrate dependencies
sp-api = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-runtime/std',
	'pallet-utils/std',
	'pallet-posts/std',
]
